GF-52877-InputHeaders-Truncated Placeholders Display-and-Hidden titleAbove Issue
When we turn non-latin on, due to the wrong width value of moon.input
field:  placeholders in InputHeaders looks truncated. so adjusted the
width value of moon.input field when non-latin turned on. and for the
Non-reported issue: In the Small Input header 'titleAbove' tag is not
visible, because when we set "smallHeader" true the height of
'titleAbove" is setted as 0, so fixed this issue too in this commit.

Enyo-DCO-1.1-Signed-off-by: Srinivas V
<srinivas.v@lge.com>

--- a/css/Header.less
+++ b/css/Header.less
@@ -99,12 +99,11 @@
 
 /* Small Header */
 .moon-header.moon-small-header {
-	height: 240px;
+	height: 280px;
 }
 
 .moon-small-header .moon-header-title-above{
-  height:0;
-  opacity:0;
+  height:1.2em;
   margin-top:0;
 }
 .moon-small-header .moon-header-title {
