--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -2005,11 +2005,10 @@
 }
 /* Small Header */
 .moon-header.moon-small-header {
-  height: 240px;
+  height: 280px;
 }
 .moon-small-header .moon-header-title-above {
-  height: 0;
-  opacity: 0;
+  height: 1.2em;
   margin-top: 0;
 }
 .moon-small-header .moon-header-title {
@@ -2296,7 +2295,7 @@
   font-family: "LG Display";
   font-size: 26px;
   line-height: 32px;
-  max-width: 300px;
+  width: 100%;
 }
 .moon-neutral .moon-input {
   color: #4b4b4b;
